[package]
name = "type_pubsub"
description = "Type-based publisher-subscriber broker written in Rust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE-APACHE"
readme = "README.md"
repository = "https://github.com/sgasse/type_pubsub"

[lib]
name = "type_pubsub"
path = "src/lib.rs"

[[bin]]
name = "type_pubsub"
path = "src/bin/type_pubsub.rs"

[dependencies]
futures = "0.3.21"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
